Lesson 2 content complete.

--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -225,7 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Substrings"
+    "### Substrings\n",
+    "Starting with variable ```text```, which contains a string, we can extract parts of the string using bracket ```[]``` notation."
    ]
   },
   {
@@ -235,6 +236,13 @@
    "outputs": [],
    "source": [
     "text = \"Gotta catch 'em all\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first character is located at index ```[0]```."
    ]
   },
   {
@@ -254,7 +262,14 @@
     }
    ],
    "source": [
-    "text[0] # The first character"
+    "text[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since strings can be any length, Python uses ```[-1]``` to denote the last character of a string. This is easier than specifying the literal length which likely varies between strings."
    ]
   },
   {
@@ -274,7 +289,14 @@
     }
    ],
    "source": [
-    "text[-1] # The last character"
+    "text[-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any other character can be returned using similar notation from the start (0, 1, 2, 3...) or end (-1, -2, -3...) of a string. When multiple characters need to be returned, the colon (```:```) operator can be used. "
    ]
   },
   {
@@ -865,7 +887,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Inequality"
+    "### Inequality\n",
+    "Inequality operators work identically to their mathematical equivalents. The only difference is the notation for ≥ (```>=```) and ≤ (```<=```). When an equality evaluates to ```True``` or ```False```, the corresponding boolean value is returned."
    ]
   },
   {
@@ -887,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +919,7 @@
        "False"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -916,7 +939,7 @@
        "True"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -934,21 +957,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = 6\n",
     "y = 6"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x >= y"
    ]
   },
   {
@@ -968,6 +982,26 @@
     }
    ],
    "source": [
+    "x >= y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "y >= x"
    ]
   },
@@ -979,6 +1013,56 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 5\n",
+    "y = 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x < y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y < x"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -986,20 +1070,288 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 45,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "## Logical Operators\n",
-    "### And (```and```)\n",
-    "### Or (```or```)\n",
-    "### Not (```not```)"
+    "x = 6\n",
+    "y = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x <= y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y <= x"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Conditional Statements"
+    "## Logical Operators\n",
+    "Whereas relational operators compare two values (typically numbers), logical operators return a boolean value based on combinations of other boolean values.\n",
+    "### Not (```not```)\n",
+    "The unary logical operator ```not``` intuitively returns the opposite of whatever it was given."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It is common to see ```not``` written as a function ```not()```. Both options are correct syntax.\n",
+    "### And (```and```)\n",
+    "The binary logical operator ```and``` returns ```True``` only when both of its operands are ```True```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True and False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False and True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False and False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Or (```or```)\n",
+    "The binary logical operator ```or``` returns ```True``` only when either of its operands are ```True```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "True or False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "False or False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conditional Statements\n",
+    "A condition is any statement that can be evaluated to ```True``` or ```False```. A conditional statement allows a program to execute different branches of code based on an outcome of the condition."
    ]
   },
   {
@@ -1007,40 +1359,98 @@
    "metadata": {},
    "source": [
     "### If Statement\n",
-    "### If...Else Statement\n",
-    "### If...Elif...Else"
+    "An ```if``` statement executes a block of code if the condition is ```True```. Otherwise, it does nothing."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5\n"
+      "You can vote.\n"
      ]
     }
    ],
    "source": [
-    "val = 0\n",
-    "if val < 5:\n",
-    "    val += 5\n",
-    "elif val < 10:\n",
-    "    val += 5\n",
-    "else:\n",
-    "    val += 5\n",
-    "print(val)"
+    "age = 20\n",
+    "if age >= 18:\n",
+    "    print(\"You can vote.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If...Else Statement\n",
+    "Adding an ```else``` condition establishes a second branch of code to be executed if the first condition is ```False```."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pass.\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 75\n",
+    "if score >= 60:\n",
+    "    print(\"Pass.\")\n",
+    "else:\n",
+    "    print(\"Fail\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### If...Elif...Else\n",
+    "When there are three (or more) branches of code, else-if (```elif```) conditional statements may be added.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = 75\n",
+    "if score > 90:\n",
+    "    print(\"A\")\n",
+    "elif score > 80:\n",
+    "    print(\"B\")\n",
+    "elif score > 70:\n",
+    "    print(\"C\")\n",
+    "elif score > 60:\n",
+    "    print(\"D\")\n",
+    "else:\n",
+    "    print(\"F\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For an ```elif``` statement, conditions are evaluated from top to bottom until the first condition evaluates to ```True```. At that point, the code block corresponding to that condition is evaluated then the if-elif-else statement is exited altogether."
+   ]
   }
  ],
  "metadata": {
