--- a/Lesson_02.ipynb
+++ b/Lesson_02.ipynb
@@ -364,6 +364,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Suppose you wish to extract every Nth character from a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'adgjmpsvy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "N = 3\n",
+    "text[0:-1:N]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Split Strings\n",
     "The method ```split()``` divides a string into a list of smaller strings. The _delimiter_, or character which divides the string, defaults to a blank space ```' '```."
    ]
@@ -1405,7 +1434,7 @@
    "source": [
     "score = 75\n",
     "if score >= 60:\n",
-    "    print(\"Pass.\")\n",
+    "    print(\"Pass\")\n",
     "else:\n",
     "    print(\"Fail\")"
    ]
