--- a/Lesson_03.ipynb
+++ b/Lesson_03.ipynb
@@ -20,7 +20,6 @@
     "# Data Structures Overview\n",
     "\n",
     "# List\n",
-    "## Methods\n",
     "A list is a mutable data structure denoted by square brackets (```[]```). _Mutable_ means that you can add, remove, and modify elements. The most simple list is an empty one."
    ]
   },
@@ -65,7 +64,7 @@
    "metadata": {},
    "source": [
     "Also like strings, lists are objects in Python and have their own corresponding methods. Unlike the array data structure in other programming languages (C, for example), since items may be added and removed dynamically throughout a program many list methods deal with these operations. A thorough list of methods may be found [here](https://www.w3schools.com/python/python_ref_list.asp).\n",
-    "\n",
+    "## Methods\n",
     "The ```append()``` method adds elements to the end of a list."
    ]
   },
@@ -634,9 +633,9 @@
    "metadata": {},
    "source": [
     "## Methods\n",
-    "Only two list methods are available for a tuple. These are ```index()``` and ```count()```.\n",
+    "Only two list methods are available for a tuple. These are ```index()``` and ```count()```. A thorough list may be found [here](https://www.w3schools.com/python/python_ref_tuple.asp).\n",
     "\n",
-    "## Usage\n",
+    "## Tuple to List\n",
     "While tuples themselves are immutable, their contents may be used elsewhere as mutable values. For example, if a function returns a tuple containing two values, these values may be assigned to a list and modified. The ```list()``` function converts contents of a tuple to list."
    ]
   },
@@ -669,11 +668,376 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dictionary\n",
+    "The dictionary data structure is like a list, except it does not necessarily need to be ordered as it uses _key-value_ pairs to define entries. Dictionaries are defined using curly braces (```{}```) and key-value pairs are defined using the colon (```:```) operator. Like the previous data structures, the simplest dictionary is empty."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "myDict = {}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Think of a Python dictionary like an English dictionary. Programmers may know the name of a _key_, but do not know the value associated with it; similarly, when using an English dictionary, readers know the existance of a word but do not necessarily know its definition. An English dictionary can be recreated using Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'selfie': 'an image that includes oneself', 'factoid': 'an invented fact believed to be true because it appears in print', 'myopic': 'not able to clearly see objects that are far away'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "webster = {\"selfie\":\"an image that includes oneself\", \\\n",
+    "           \"factoid\":\"an invented fact believed to be true because it appears in print\", \\\n",
+    "           \"myopic\":\"not able to clearly see objects that are far away\"}\n",
+    "print(webster)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Elsewhere in the program, when a key is refererenced its value gets returned."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'an image that includes oneself'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "webster[\"selfie\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If writing (or over-writing) a key-value pair is desired, simply use the assignment operator (```=```)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'selfie': 'should not be a real word', 'factoid': 'an invented fact believed to be true because it appears in print', 'myopic': 'not able to clearly see objects that are far away'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "webster[\"selfie\"] = \"should not be a real word\"\n",
+    "print(webster)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the same structure, if the key to be over-written does not exist, a corresponding entry is simply written to the dictionary."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'selfie': 'should not be a real word', 'factoid': 'an invented fact believed to be true because it appears in print', 'myopic': 'not able to clearly see objects that are far away', 'juggernaut': 'a massive inexorable force, campaign, movement, or object that crushes whatever is in its path'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "webster[\"juggernaut\"] = \"a massive inexorable force, campaign, movement, or object that crushes whatever is in its path\"\n",
+    "print(webster)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Methods\n",
+    "\n",
+    "A thorough list of methods may be found [here](https://www.w3schools.com/python/python_ref_dictionary.asp).\n",
+    "\n",
+    "# Sets\n",
+    "A set may be thought of as a dictionary, a collection of key-value pairs, but without the values. Sets are not ordered, and their contents are immutable (an entry in a set cannot be over-written), but using set methods entries can be added or removed. Sets also do not allow duplicates; they are simply ignored."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'banana', 'orange', 'apple'}\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "mySet = {\"apple\", \"banana\", \"orange\", \"apple\", \"apple\", \"apple\", \"apple\", \"apple\", \"apple\"}\n",
+    "print(mySet)\n",
+    "print(len(mySet))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are methods unique to the set data structure, such as ```union()```, ```intersection()```, and ```difference()```, which establish set theory functionality. Other methods, such as "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nums = {0, 1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
+    "even = {0, 2, 4, 6, 8}\n",
+    "odd = {1, 3, 5, 7, 9}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```union()``` returns a combined set of ```even``` and ```odd```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even.union(odd)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```intersect()``` returns the values of ```nums``` which are also in ```odd```."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.intersection(odd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 2, 4, 6, 8}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.intersection(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 2, 4, 6, 8}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.difference(odd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 3, 5, 7, 9}"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.difference(even)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "even.issubset(nums) # Returns true since every key in even is also in nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "odd.issubset(nums) # Returns true since every key in odd is also in nums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.issubset(even) # Returns false since every value in nums is not in even."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums.issuperset(even) # Returns true since nums contains every value of even + extra."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A thorough list of methods may be found [here](https://www.w3schools.com/python/python_ref_set.asp)."
+   ]
   }
  ],
  "metadata": {
