Fixed formatted title size.

--- a/Lesson_03.ipynb
+++ b/Lesson_03.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Course Information\n",
+    "# Course Information\n",
     "* Introduction to Programming (INFO-233)\n",
     "* Ramapo College of New Jersey\n",
     "* Professor Samuel Jacobs\n",
@@ -809,7 +809,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'banana', 'orange', 'apple'}\n",
+      "{'orange', 'apple', 'banana'}\n",
       "3\n"
      ]
     }
