--- a/Lesson_04.ipynb
+++ b/Lesson_04.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Course Information\n",
+    "# Course Information\n",
     "* Introduction to Programming (INFO-233)\n",
     "* Ramapo College of New Jersey\n",
     "* Professor Samuel Jacobs\n",
@@ -66,16 +66,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.46094140864736455\n",
-      "0.5022189729641865\n",
-      "0.8338128974879389\n",
-      "0.99034435621331\n",
-      "0.6342820534763488\n",
-      "0.5561343531364302\n",
-      "0.692225262820109\n",
-      "0.27394511083084383\n",
-      "0.6691727836560096\n",
-      "0.6064655380051192\n"
+      "0.1211278017463262\n",
+      "0.9371220212133055\n",
+      "0.7979775285910616\n",
+      "0.41698153179347364\n",
+      "0.9297545059268422\n",
+      "0.7911944439702998\n",
+      "0.07388350139330935\n",
+      "0.6684075833733926\n",
+      "0.5866039500973872\n",
+      "0.3087509044174066\n"
      ]
     }
    ],
@@ -107,8 +107,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "# of iterations: 14\n",
-      "current value: 0.11026450933813181\n"
+      "# of iterations: 2\n",
+      "current value: 0.14001750647996192\n"
      ]
     }
    ],
