--- a/Lesson_08.ipynb
+++ b/Lesson_08.ipynb
@@ -15,10 +15,12 @@
     "* Common Libraries\n",
     "\n",
     "# Object-Oriented Programming\n",
+    "## Geometry Example\n",
     "Object-Oriented Programming (OOP) is best described with an example. Suppose we wish to create a geometric model of a rectangle. Recall that a rectangle is fully defined by the edges of its two orthogonal lengths, ```height``` and ```width``` ('a' and 'b', respectively).\n",
     "\n",
     "![](https://upload.wikimedia.org/wikipedia/commons/thumb/7/79/Illustration_for_the_area_of_a_rectangle.svg/1920px-Illustration_for_the_area_of_a_rectangle.svg.png)\n",
     "\n",
+    "## Procedural Programming Approach\n",
     "Now, with the knowledge that our model corresponds specifically to a rectangle, no other shape, we should be able to ascertain additional information directly from ```height``` and ```width```; for example, perimeter and area of a rectangle are common attributes that are fully defined from those two values."
    ]
   },
@@ -54,7 +56,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The previous code was the procedural programming approach, which requires separate, unassociated variables for ```area``` and ```perimeter```. Using an OOP approach, since both attributes are inherent to a rectangle, they should therefore be inherent to a data structure which models a rectangle. We achieve this by building a ```Class``` called ```Rectangle```. A class contains all of the data necessary to fully-describe an object and methods to act on that object. A sample class, ```Rectangle```, has been written below."
+    "The previous code was the procedural programming approach, which requires separate, unassociated variables for ```area``` and ```perimeter```.\n",
+    "\n",
+    "## Object-Oriented Structure\n",
+    "Using an OOP approach, since both attributes are inherent to a rectangle, they should therefore be inherent to a data structure which models a rectangle. We achieve this by building a ```Class``` called ```Rectangle```. A class contains all of the data necessary to fully-describe an object and methods to act on that object. A sample class, ```Rectangle```, has been written below."
    ]
   },
   {
@@ -241,29 +246,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Referring back to the ```Rectangle``` class creation, there are elements to explain. Similar to how functions are created using the ```def``` keyword, classes are created using the ```class``` keyword. The ```self``` keyword is also scattered throughout the class. Unlike functions which require passing every required piece of data as an argument, class methods can make use of the ```self.*``` notation. For example, since we know each instance of ```Rectangle``` must be defined by a ```height``` and ```width```, those two values can be uniquely embedded in each instance of ```Rectangle``` and accessed by its methods.\n",
+    "Referring back to the ```Rectangle``` class creation, similar to how functions are created using the ```def``` keyword, classes are created using the ```class``` keyword. The ```self``` keyword is also scattered throughout the class. Unlike functions which require passing every required piece of data as an argument, class methods can make use of the ```self.*``` notation. For example, since we know each instance of ```Rectangle``` must be defined by a ```height``` and ```width```, those two values can be uniquely embedded in each instance of ```Rectangle``` and accessed by its methods.\n",
     "\n",
     "When computing the method ```area()```,\n",
     "\n",
     "    def area(self):\n",
     "        return self.height*self.width\n",
     "\n",
-    "Python accesses whatever the height and width are for the current instance, as defined by its _constructor_. A _constructor_ by defining the ```__init__()``` method. The ```__init__()``` method name is common to all classes with a constructor, and it uses the specific double-underscore ```__``` to ensure a naming conflict does not occur with any other method."
+    "Python accesses whatever the height and width are for the current instance, as defined by its _constructor_. A _constructor_ by defining the ```__init__()``` method. The ```__init__()``` method name is common to all classes with a constructor, and it uses the specific double-underscore ```__``` to ensure a naming conflict does not occur with any other method.\n",
+    "\n",
+    "Additional information on classes may be found [here](https://www.w3schools.com/python/python_classes.asp)."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
