Added common libraries.

--- a/Lesson_08.ipynb
+++ b/Lesson_08.ipynb
@@ -12,7 +12,7 @@
     "\n",
     "# Lesson 08 Topics\n",
     "* Object-Oriented Programming\n",
-    "* Common Libraries\n",
+    "* (More) Common Libraries\n",
     "\n",
     "# Object-Oriented Programming\n",
     "## Geometry Example\n",
@@ -255,7 +255,74 @@
     "\n",
     "Python accesses whatever the height and width are for the current instance, as defined by its _constructor_. A _constructor_ by defining the ```__init__()``` method. The ```__init__()``` method name is common to all classes with a constructor, and it uses the specific double-underscore ```__``` to ensure a naming conflict does not occur with any other method.\n",
     "\n",
-    "Additional information on classes may be found [here](https://www.w3schools.com/python/python_classes.asp)."
+    "Additional information on classes may be found [here](https://www.w3schools.com/python/python_classes.asp).\n",
+    "\n",
+    "# (More) Common Libraries\n",
+    "## File Reading\n",
+    "Python can read text files using the ```open()``` function. Values may be read using the ```read()``` method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is a test.\\nNo really, this is a test.\\nOkay.\\nCool!\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file = open('sample.txt', 'r')\n",
+    "file.read()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## CSV Reading\n",
+    "The CSV module is useful for reading comma separated values (CSV) from files. CSV files may be thought as structured text files. Their contents may easily be read into one- and two-dimensional data structures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import csv\n",
+    "file = open('sample.csv', 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Yankees, New York City\n",
+      "Red Sox, Boston\n",
+      "Orioles, Baltimore\n",
+      "Rays, Tampa Bay\n",
+      "Blue Jays, Toronto\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('sample.csv', 'r', newline='\\n') as csvfile:\n",
+    "    lines = csv.reader(csvfile, delimiter=',', quotechar='|')\n",
+    "    for line in lines:\n",
+    "        print(', '.join(line))"
    ]
   }
  ],
