Added GUI topics.

--- a/Lesson_09.ipynb
+++ b/Lesson_09.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
        "'♦4'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -232,65 +232,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "♥5\n",
-      "♣6\n",
-      "♠5\n",
       "♦T\n",
-      "♦4\n",
-      "♥Q\n",
-      "♦8\n",
-      "♦K\n",
-      "♦A\n",
-      "♥8\n",
-      "♥2\n",
-      "♦7\n",
-      "♥T\n",
-      "♠6\n",
-      "♠J\n",
-      "♣J\n",
-      "♠2\n",
-      "♠4\n",
-      "♦6\n",
-      "♥4\n",
-      "♣T\n",
-      "♣Q\n",
-      "♠8\n",
-      "♣7\n",
-      "♦2\n",
-      "♥3\n",
-      "♠9\n",
       "♣2\n",
-      "♦9\n",
-      "♠A\n",
+      "♦Q\n",
+      "♣K\n",
+      "♥J\n",
+      "♥T\n",
+      "♣7\n",
       "♦3\n",
+      "♥2\n",
+      "♣6\n",
+      "♣J\n",
+      "♦4\n",
+      "♦6\n",
       "♥9\n",
-      "♠3\n",
-      "♣4\n",
-      "♠K\n",
-      "♠Q\n",
+      "♣8\n",
       "♠T\n",
+      "♥7\n",
+      "♠5\n",
+      "♦8\n",
+      "♠J\n",
+      "♣9\n",
+      "♠7\n",
+      "♠8\n",
+      "♥5\n",
+      "♦7\n",
       "♦5\n",
+      "♠2\n",
+      "♠Q\n",
+      "♦A\n",
+      "♠6\n",
       "♣5\n",
       "♥A\n",
-      "♥7\n",
-      "♣K\n",
-      "♣3\n",
+      "♠K\n",
+      "♦9\n",
       "♣A\n",
-      "♣9\n",
-      "♥6\n",
-      "♦J\n",
-      "♣8\n",
+      "♦K\n",
+      "♣3\n",
       "♥K\n",
-      "♥J\n",
-      "♠7\n",
-      "♦Q\n"
+      "♠9\n",
+      "♠4\n",
+      "♣4\n",
+      "♥4\n",
+      "♠3\n",
+      "♥6\n",
+      "♣Q\n",
+      "♣T\n",
+      "♥3\n",
+      "♦2\n",
+      "♦J\n",
+      "♥Q\n",
+      "♠A\n",
+      "♥8\n"
      ]
     }
    ],
@@ -302,11 +302,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If ```shuffle()``` is called a second time, the deck will randomize again. With this behavior, ```Deck``` creates a fully-functional card deck.\n",
+    "## Inheritance\n",
+    "Suppose we wish to build upon ```Deck```; it is beneficial when writing common playing card games to have the functionality that ```Deck``` provides without rewriting the same code. This is done using _inheritance_."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class BlackJack(Deck):       \n",
+    "    def __init__(self):\n",
+    "        Deck.__init__(self)\n",
+    "        Deck.shuffle(self)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, when class ```BlackJack``` is called, the code required to create a complete deck has already been written. At a minimum, any game which uses a standard deck simply needs to first shuffle. We therefore initialize an instance of ```Deck``` in the ```BlackJack``` constructor, and ```shuffle()``` it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'♠7'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "blackjack = BlackJack()\n",
+    "blackjack.draw().show() # Random Card Drawn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```BlackJack``` may be further expanded to add methods for gameplay and scoring."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Even More Common Libraries\n",
+    "## Tkinter (Graphical User Interfaces)\n",
+    "There are several GUI libraries with Python bindings - an infrastructure for combining the core function of your code with graphical elements. Tkinter is built-in to Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "class Window(Frame):\n",
+    "    def __init__(self, master=None):\n",
+    "        Frame.__init__(self, master)\n",
+    "        self.master = master\n",
+    "\n",
+    "# initialize tkinter\n",
+    "root = Tk()\n",
+    "app = Window(root)\n",
+    "\n",
+    "# set window title\n",
+    "root.wm_title(\"INFO-233\")\n",
+    "root.geometry('300x200')\n",
+    "button = Button(root, text='Hi Class!')\n",
+    "button.pack()\n",
+    "\n",
+    "# show window\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are Python bindings for other graphical libraries like Qt and GTK."
+   ]
   }
  ],
  "metadata": {
